// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Stepper renders clickable Stepper 1`] = `
<Stepper
  steps={
    Array [
      Object {
        "clickable": true,
        "completed": true,
        "title": "Step one",
      },
      Object {
        "clickable": true,
        "ongoing": true,
        "title": "Step two",
      },
      Object {
        "clickable": true,
        "title": "Step three",
      },
      Object {
        "selected": true,
        "title": "Step four",
      },
      Object {
        "title": "Step Five",
      },
      Object {
        "title": "Step Six",
      },
    ]
  }
>
  <div
    className="stepper"
  >
    <ol>
      <RenderSteps
        steps={
          Array [
            Object {
              "clickable": true,
              "completed": true,
              "title": "Step one",
            },
            Object {
              "clickable": true,
              "ongoing": true,
              "title": "Step two",
            },
            Object {
              "clickable": true,
              "title": "Step three",
            },
            Object {
              "selected": true,
              "title": "Step four",
            },
            Object {
              "title": "Step Five",
            },
            Object {
              "title": "Step Six",
            },
          ]
        }
      >
        <li
          className="stepper-completed"
          key="0"
        >
          

           
          <a>
            <StepperContent
              completed={true}
              index={0}
              title="Step one"
            >
              <div
                className="material-icons stepper-icon"
              >
                check
              </div>
              

              Step one
            </StepperContent>
          </a>
           
          

           
        </li>
        <li
          className="stepper-ongoing"
          key="1"
        >
          

           
          <a>
            <StepperContent
              index={1}
              title="Step two"
            >
              <div
                className="stepper-number"
              >
                2
              </div>
              Step two
            </StepperContent>
          </a>
           
          

           
        </li>
        <li
          className=""
          key="2"
        >
          

           
          <a>
            <StepperContent
              index={2}
              title="Step three"
            >
              <div
                className="stepper-number"
              >
                3
              </div>
              Step three
            </StepperContent>
          </a>
           
          

           
        </li>
        <li
          className="stepper-selected"
          key="3"
        >
          <StepperContent
            index={3}
            title="Step four"
          >
            <div
              className="stepper-number"
            >
              4
            </div>
            Step four
          </StepperContent>
        </li>
        <li
          className=""
          key="4"
        >
          <StepperContent
            index={4}
            title="Step Five"
          >
            <div
              className="stepper-number"
            >
              5
            </div>
            Step Five
          </StepperContent>
        </li>
        <li
          className=""
          key="5"
        >
          <StepperContent
            index={5}
            title="Step Six"
          >
            <div
              className="stepper-number"
            >
              6
            </div>
            Step Six
          </StepperContent>
        </li>
      </RenderSteps>
    </ol>
    <RenderStepperNav
      steps={
        Array [
          Object {
            "clickable": true,
            "completed": true,
            "title": "Step one",
          },
          Object {
            "clickable": true,
            "ongoing": true,
            "title": "Step two",
          },
          Object {
            "clickable": true,
            "title": "Step three",
          },
          Object {
            "selected": true,
            "title": "Step four",
          },
          Object {
            "title": "Step Five",
          },
          Object {
            "title": "Step Six",
          },
        ]
      }
    >
      <div
        className="stepper-responsive"
      >
        <div
          className="material-icons stepper-nav-left"
        >
          keyboard_arrow_left
        </div>
        <div
          className="stepper-responsive-text"
        >
          Step 3
        </div>
        <div
          className="material-icons stepper-nav-right"
        >
          keyboard_arrow_right
        </div>
      </div>
    </RenderStepperNav>
  </div>
</Stepper>
`;

exports[`Component: Stepper renders in vertical mode if prop vertical is provided 1`] = `
<div
  className="stepper stepper-vertical"
>
  <ol>
    <RenderSteps
      steps={
        Array [
          Object {
            "completed": true,
            "subtitle": "24.12.17 12:10",
            "title": "Step one",
          },
          Object {
            "ongoing": true,
            "title": "Step two",
          },
          Object {
            "selected": true,
            "title": "Step three",
          },
          Object {
            "title": "Step four",
          },
        ]
      }
    />
  </ol>
  <RenderStepperNav />
</div>
`;

exports[`Component: Stepper renders with default items if no props are provided 1`] = `
<div
  className="stepper"
>
  <ol>
    <RenderSteps
      steps={
        Array [
          Object {
            "completed": true,
            "subtitle": "24.12.17 12:10",
            "title": "Step one",
          },
          Object {
            "ongoing": true,
            "title": "Step two",
          },
          Object {
            "selected": true,
            "title": "Step three",
          },
          Object {
            "title": "Step four",
          },
        ]
      }
    />
  </ol>
  <RenderStepperNav />
</div>
`;

exports[`Component: Stepper renders with given items if prop Stepper is given 1`] = `
<Stepper
  steps={
    Array [
      Object {
        "title": "one step",
      },
      Object {
        "title": "two steps",
      },
      Object {
        "title": "three steps for testing",
      },
    ]
  }
>
  <div
    className="stepper"
  >
    <ol>
      <RenderSteps
        steps={
          Array [
            Object {
              "title": "one step",
            },
            Object {
              "title": "two steps",
            },
            Object {
              "title": "three steps for testing",
            },
          ]
        }
      >
        <li
          className=""
          key="0"
        >
          <StepperContent
            index={0}
            title="one step"
          >
            <div
              className="stepper-number"
            >
              1
            </div>
            one step
          </StepperContent>
        </li>
        <li
          className=""
          key="1"
        >
          <StepperContent
            index={1}
            title="two steps"
          >
            <div
              className="stepper-number"
            >
              2
            </div>
            two steps
          </StepperContent>
        </li>
        <li
          className=""
          key="2"
        >
          <StepperContent
            index={2}
            title="three steps for testing"
          >
            <div
              className="stepper-number"
            >
              3
            </div>
            three steps for testing
          </StepperContent>
        </li>
      </RenderSteps>
    </ol>
    <RenderStepperNav
      steps={
        Array [
          Object {
            "title": "one step",
          },
          Object {
            "title": "two steps",
          },
          Object {
            "title": "three steps for testing",
          },
        ]
      }
    >
      <div
        className="stepper-responsive"
      >
        <div
          className="stepper-responsive-text"
        >
          Step 3
        </div>
      </div>
    </RenderStepperNav>
  </div>
</Stepper>
`;
